# Quaternion

./: CMakeLists.txt  LICENSE  README.MD
include/Quaternion/: quaternion.hpp  quaternion.tpp
tests/: CMakeLists.txt  main.cpp
